# multi-agent-v1

./: .cursorrules  .env.test  .gitignore  README.md  main.py  pod-kill-experiment.yaml  pyproject.toml  pytest.ini  requirements.txt  run_example.py  run_investigation.py  run_live_cluster.py  show_agents.sh  targeted-pod-kill.yaml  test_template.py  tool_output.md  workflow_investigation.py
agents/: cluster_agent.py  events_agent.py  logs_agent.py  master_agent.py  metrics_agent.py  network_agent.py
chaos-tests/: network-delay-experiment.yaml
docs/: PROP_CHANGE.md  README.md  implementation_guide.md  k8s_root_cause_analysis_architecture.md  visualization_capabilities.md
docs/api/: api_reference.md
docs/architecture/: system_overview.md
docs/components/: README.md  analysis_engine.md  simulation_engine.md
docs/deployment/: deployment_guide.md  security.md
docs/diagrams/: component_architecture.txt  component_communication.txt  data_flow.txt  message_flow.md  security_architecture.txt  system_architecture.txt
docs/features/: ADVANCED.md
docs/scenarios/: README.md  (+2 more)
examples/: foo.py
graph/: workflow.py
k8s-manifests/: invalid-deployment.yaml
k8s_analyzer/: __main__.py
output/: index.html
prompts/: analysis_prompt.txt  analysis_reasoning_prompt.txt  diagnostic_plan_prompt.txt  intent_analysis_prompt.txt  recommendations_prompt.txt
scripts/: run_tests.sh  show_agent_interactions.sh
simulate/: README.md  apply-scenario.sh
tests/: conftest.py  requirements-test.txt
utils/: __init__.py  interaction_tracer.py  visualizations.py
(+209 files in other folders)
